bug: fix main overflowing horizontally on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -57,8 +57,9 @@ main {
   width: 90%;
   height: fit-content;
   position: relative;
-  padding: 0 2.5rem 2.5rem 7.5rem;
-  margin-top: 6rem;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 8rem;
 }
 
 /* @media (prefers-color-scheme: dark) {
