--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,6 +1,6 @@
 .container {
     margin-left: 2%;
-    margin-top: 20%;
+    margin-top: 18%;
     width: 80%;
 }
 
