--- a/src/app/projects/page.module.css
+++ b/src/app/projects/page.module.css
@@ -12,6 +12,8 @@
 
     position: relative;
     width: 100%;
+    padding-left: 2rem;
+    padding-bottom: 2rem;
 }
 
 .projectsContainer {
